# ReLMM

./: .gitignore  README.md  inputs.json  main.py  pyproject.toml  user_guide.md
MHP_dataset/: perovskites.csv  perovskites.pkl
jupyter_notebooks/: MHP_dataset.ipynb  MHP_dataset_analysis.ipynb  SynthDataset.ipynb  inputs.json  policy_network_RLLoop.ipynb  policy_networks.ipynb  single-player_multi-agent_RL.ipynb  single-player_multi-agent_RL_test_model.ipynb  single_player_multi_agent_RL.ipynb  single_player_single_agent_RL.ipynb  soa_fs_methods_run.ipynb
scripts/: environment.py  inputs.json  main.py  predictor_models.py  qlearning.py  read_data.py  single-player_multi-agent_RL.ipynb  soa_fs_methods_class.py  utils_dataset.py
scripts/jupyter_notebooks/: SynthDataset.ipynb  policy_network_RLLoop.ipynb  policy_networks.ipynb  single_player_single_agent_RL.ipynb  soa_fs_methods_run.ipynb
src/ReLMM/: .__init__.swp  __init__.py  environment.py  predictors.py  qlearning.py  read_data.py  soa_feature_selectors.py  utils_dataset.py
src/ReLMM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synthetic_dataset/: synthetic_data_randomSamples_200_nonlinearf5.csv  synthetic_data_randomSamples_200_sumf5.csv  test_synthetic_data_gridSamples_89_nonlinearf5.csv  test_synthetic_data_gridSamples_89_sumf5.csv  test_synthetic_data_randomSamples_89_nonlinearf5.csv  test_synthetic_data_randomSamples_89_sumf5.csv
tests/: test_environment.py  test_predictors.py  test_qlearning.py  test_read_data.py  test_soa_feature_selectors.py  test_utils_dataset.py
