[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]
name="ReLMM"
version="0.0.1"
requires-python=">=3.11"
dependencies=[
	"numpy >= 1.25.1, <2",
	"pandas >= 2.0.3, <3",
	"torch >= 2.0.1, <3",
	"scikit-learn >= 1.3.0, <2",
	"xgboost >= 1.7.6, <2",
	"matplotlib >= 3.7.2, <4"
]
authors=[
	{name="Maitreyee Sharma Priyadarshini", email="msharmap@vt.edu"},
	{name="Nikhil Kumar Thota", email="nikthota7@gmail.com"}
]
maintainers=[
	{name="Maitreyee Sharma Priyadarshini", email="msharmap@vt.edu"},
	{name="Nikhil Kumar Thota", email="nikthota7@gmail.com"}
]
description="ReLMM is a reinforcement learning-based feature engineering tool that finds a minimal feature set for fitting a model to predict the material property of interest."
readme="README.md"
keywords=["reinforcement learning", "feature selection"]
classifiers=[
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.11"
]

[project.urls]
Repository="https://github.com/rxhernandez/ReLMM"

[tool.setuptools]
license-files=['LICENSE']
zip-safe=true
include-package-data=false
